// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch behaves correctly when interacting 1`] = `
<label
  class="inline-flex max-w align-middle -webkit-tap-highlight-color mx-0 cursor-pointer items-start text-lg"
  data-testid="switch"
  id="base-ui-:rg:-label"
>
  <span
    aria-checked="true"
    aria-labelledby="base-ui-:rg:-label"
    class="w-[40px] h-[24px] p-0 relative inline-flex z-0 overflow-visible shrink-0 align-middle group"
    data-checked=""
    id="base-ui-:rf:"
    role="switch"
    tabindex="0"
  >
    <span
      class="w-full h-full border border-solid bg-gray border-gray opacity-100 rounded-[12px] transition-colors duration-300 ease-out group-data-[checked]:bg-blue group-data-[checked]:border-blue group-data-[disabled]:opacity group-[[data-disabled][data-unchecked]]:bg-black"
    />
    <span
      class="w-[22px] h-[22px] bg-current text-white block rounded-full shadow-1 absolute z-10 p-0 top-[1px] left-[1px] transition-transform duration-150 ease-out group-[:hover:not([data-disabled])]:shadow-[0_0_0_4px_rgba(32,78,207,0.48)] group-focus-visible:shadow group-data-[checked]:translate-x"
      data-checked=""
    />
  </span>
  <input
    aria-hidden="true"
    id="base-ui-:rg:"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
    type="checkbox"
  />
  <span
    class="inline-block leading-[1em] mb-0 text-graphite ml-[0.5em] mt-[0.25em] max-w-[calc(100%-1em"
  >
    <span
      class="align-top text-[0.8125rem]"
    >
      Switch
    </span>
  </span>
</label>
`;

exports[`Switch renders default Switch without label 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      aria-checked="false"
      class="w-[40px] h-[24px] p-0 relative inline-flex z-0 overflow-visible shrink-0 align-middle group"
      data-testid="switch"
      data-unchecked=""
      id="base-ui-:r0:"
      role="switch"
      tabindex="0"
    >
      <span
        class="w-full h-full border border-solid bg-gray border-gray opacity-100 rounded-[12px] transition-colors duration-300 ease-out group-data-[checked]:bg-blue group-data-[checked]:border-blue group-data-[disabled]:opacity group-[[data-disabled][data-unchecked]]:bg-black"
      />
      <span
        class="w-[22px] h-[22px] bg-current text-white block rounded-full shadow-1 absolute z-10 p-0 top-[1px] left-[1px] transition-transform duration-150 ease-out group-[:hover:not([data-disabled])]:shadow-[0_0_0_4px_rgba(32,78,207,0.48)] group-focus-visible:shadow group-data-[checked]:translate-x"
        data-unchecked=""
      />
    </span>
    <input
      aria-hidden="true"
      id="base-ui-:r1:"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch renders disabled state 1`] = `
<label
  class="inline-flex max-w align-middle -webkit-tap-highlight-color mx-0 cursor-default items-start text-lg"
  data-testid="switch"
  id="base-ui-:r7:-label"
>
  <span
    aria-checked="false"
    aria-disabled="true"
    aria-labelledby="base-ui-:r7:-label"
    class="w-[40px] h-[24px] p-0 relative inline-flex z-0 overflow-visible shrink-0 align-middle group"
    data-disabled=""
    data-unchecked=""
    id="base-ui-:r6:"
    role="switch"
    tabindex="-1"
  >
    <span
      class="w-full h-full border border-solid bg-gray border-gray opacity-100 rounded-[12px] transition-colors duration-300 ease-out group-data-[checked]:bg-blue group-data-[checked]:border-blue group-data-[disabled]:opacity group-[[data-disabled][data-unchecked]]:bg-black"
    />
    <span
      class="w-[22px] h-[22px] bg-current text-white block rounded-full shadow-1 absolute z-10 p-0 top-[1px] left-[1px] transition-transform duration-150 ease-out group-[:hover:not([data-disabled])]:shadow-[0_0_0_4px_rgba(32,78,207,0.48)] group-focus-visible:shadow group-data-[checked]:translate-x"
      data-disabled=""
      data-unchecked=""
    />
  </span>
  <input
    aria-hidden="true"
    disabled=""
    id="base-ui-:r7:"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
    type="checkbox"
  />
  <span
    class="inline-block leading-[1em] mb-0 text-graphite pointer-events ml-[0.5em] mt-[0.25em] max-w-[calc(100%-1em"
  >
    <span
      class="align-top text-[0.8125rem]"
    >
      Disabled
    </span>
  </span>
</label>
`;
